<resources>
    <string name="app_name">diggingclub</string>
    <string name="welcome">\@%s 님의 가입을 환영합니다.\n이제 디글과 함께 취향을 공유하고 기록할 수 있습니다.</string>
    <string name="nickname">\@%s</string>
    <string name="melody_nickname">%s 님이 좋아하는 멜로디</string>
    <string name="likelist_nickname">%s 님의 좋아요 멜로디 리스트</string>
    <string name="following">%s 팔로잉</string>
    <string name="follower">%s 팔로워</string>
    <string name="record">%1$s 님은 %2$s 장르에 가장 큰 관심이 있어요!\n가장 많이 들은 아티스트는 %3$s고\n가장 좋아하는 아티스트는 %4$s예요!\n%5$s를 가장 많이 재생했어요!</string>
    <string name="no_record">%s 님의 음악 취향을 분석중이에요!</string>
    <string name="follow">%1$s&#160;&#160;팔로워 \t\t\t\t\t\t\t\t\t %2$s&#160;&#160;팔로잉</string>


    <string name="tos_purpose">다음의 기술한 ‘서비스 이용 약관’에는 Diggle 서비스 이용을 위해 유저가 이행해야 할 항목들과 Diggle 서비스 프로덕트 관리자가 이행해야 할 항목을 열거하여 명시되어 있습니다. 어떤 경우에도 본 서비스를 이용하려면 귀하는 대한민국(Republic of Korea) 연령 기준 만 9세 이상이어야 합니다.</string>
    <string name="tos_community_guideline">Diggle 서비스를 이용하는 모든 사용자의 경우 다음 행위가 금지됩니다.\n• 거짓 정보를 제공하거나 불법 행위를 저지르거나 오해의 소지가 있거나 사기성이 있거나 다른 사람의 권리를 침해(허락 없이 다른 사람의 콘텐츠를 사용하는 경우 포함)하는 행위\n• 스팸, 괴롭힘, 나체 이미지 게시 등의 비도덕적인 커뮤니티 이용\n• 가짜 계정을 만들거나 엑세스 권한이 없는 정보를 수집하거나 계정(또는 좋아요 및 팔로워 등의 계정의 일부)을 구매, 판매 또는 양도하거나 다른 사람의 계정에 로그인하는 행위\n• 유저 이름에 도메인 또는 URL을 사용하는 행위\n• 바이러스를 전송하는 행위, 본 서비스상에서 오버로딩(overloading), 플러딩(flooding) 또는 스패밍(spamming)을 실행하는 행위 등을 포함하여 사용자, 호스트 또는 네트워크의 접근을 방해하거나 중단시키는 행위 혹은 그러한 방해나 중단을 시도하는 행위 또는 본 서비스를 방해하거나 본 서비스상에서 심한 과부하를 일으키는 식으로 콘텐츠의 생성을 스크립팅(scripting)하는 행위\n• 아티스트의 저작권을 위반하는 행위\n• 현재 사용 가능한 인터페이스 이외의 방법으로 본 서비스에 접근하는 행위\n• 이 서비스의 비공개 영역, 당사의 컴퓨터 시스템 또는 당사 제공업체의 기술 전송 시스템에 엑세스하거나 이를 무단으로 변경 및 이용하는 행위\n• 시스템 또는 네트워크의 취약성을 검사, 스캔 또는 테스트하거나 보안 조치 내지 인증 조치를 위반하거나 위반/우회하는 모든 행위</string>
    <string name="tos_contents_auth">당사가 관련 법령에 따라 법률상 책임을 지는 경우를 제외하면, 유저는 유저 스스로의 본 서비스의 이용과 유저가 제공하는 콘텐츠(귀하의 콘텐츠가 관련 법률, 규정, 규칙을 준수하는지 여부 포함)에 대하여 책임이 있습니다.\n\n유저는 유저 스스로가 타인과 편하게 공유할 수 있는 콘텐츠만을 제공하여야 합니다.\nDiggle에 작성하는 모든 콘텐츠의 소유권은 게시자에게 있습니다. 다만, 콘텐츠 제작에 사용되는 모든 데이터는 그 출처에 소유권이 있습니다. 다만, ‘커뮤니티 가이드라인’ 및 기타 비도덕적인 행위가 적발될 경우 콘텐츠가 삭제되거나 계정이 제한 또는 삭제될 수 있습니다.</string>
    <string name="tos_data_use_policy">당사는 이용자에게 더 나은 서비스를 제공하기 위하여 이용자가 Diggle을 이용하는 과정에서 발생하는 활동 데이터(게시물 콘텐츠 좋아요, 음악 콘텐츠 재생 등을 의미합니다)를 저장하여 Diggle 서비스의 성능 향상 및 추천 시스템 개선 등의 목적으로 활용할 수 있습니다.</string>
    <string name="tos_service_provider">Diggle는 회원의 개인정보를 최선으로 보호하고 관련된 불만을 처리하기 위해 노력하고 있습니다.\n• 당사는 서비스를 이용하는 유저로부터 제기되는 의견이나 불만이 정당하다고 인정할 경우 이를 처리하여야 합니다. 이때 처리과정에 대해서 고객에게 메일 및 알림 등의 방법으로 전달합니다.• 당사는 정보통신망 이용촉진 및 정보보호에 관한 법률, 통신비밀보호법, 전기통신사업법 등 서비스의 운영, 유지와 관련 있는 법규를 준수합니다.• 관련 문의사항은 책임자(이형기, dlgudrl1203@gmail.com )를 통해 전달해주시기 바랍니다.</string>
    <string name="tos_etc">본 약관의 준거법은 대한민국 법으로 하며, 본 약관과 관련하여 소송이 제기되는 경우 민사소송법 상의 관할 법원을 재판관할을 갖는 법원으로 합니다.\n\n이 ‘서비스 이용 약관’은 2023년 11월 25일에 최종적으로 개정되었습니다.</string>
    <string name="pp_policy">개인정보 처리방침은 Diggle의 특정 가입 절차를 거친 이용자들이 이용 가능한 서비스를 제공함에 있어, 개인정보를 어떻게 수집·이용·보관·파기하는지에 대한 정보를 담은 방침을 의미합니다. Diggle은 개인정보 처리방침에 따라 개인정보보호법 등 국내 개인정보 보호 법령은 모두 준수하고 있음을 알려드립니다.</string>
    <string name="pp_item">Diggle은 더 나은 서비스 제공을 위해 다음 항목 중 최소한의 개인정보를 수집합니다.\n1) 회원가입 시 수집되는 개인정보(필수)\n회원 이름, 회원 닉네임, 회원 전화번호, 회원 이메일, 회원 성별\n2) 이외 선택적으로 수집되는 개인정보(선택)\n위치 정보, 사진 및 카메라 정보, 기타 유저 활동 정보</string>
    <string name="pp_purpose">수집된 개인정보는 다음의 목적에 한하여 활용됩니다.\n1. 가입 및 탈퇴 의사 확인, 회원 식별\n2. 서비스 제공 및 기존·신규 시스템 개발·유지·개선\n3. 불법·약관 위반 게시물 게시 등 부정행위 방지를 위한 운영 시스템 개발·유지·개선\n4. 문의·제휴·광고·이벤트·게시 관련 요청 응대 및 처리\n5. 추천시스템을 통한 부가 서비스 제공 및 고도화</string>
    <string name="pp_third_party">Diggle은 회원의 개인정보를 제3자에게 제공하지 않습니다. 단, 다음의 사유가 있을 경우 제공할 수 있습니다.\n\n1. 이용자의 생명이나 안전에 급박한 위험이 확인되어 이를 해소하기 위한 경우\n2. 관련법에 따른 규정에 의한 경우\n3. 관리자의 경우(가입자 식별을 위해)\n4. 서비스 악성 활용, 스팸 유저의 식별 및 처리\n5. ‘서비스 이용 약관’ 위반 유저</string>
    <string name="pp_store_destruction">Diggle은 서비스를 제공하는 동안 개인정보 처리방침 및 관련법에 의거하여 회원의 개인정보를 지속적으로 관리 및 보관합니다. 탈퇴 등 개인정보 수집 및 이용목적이 달성될 경우, 수집된 개인정보는 즉시 또는 다음과 같이 일정 기간 이후 파기됩니다.\n1. 가입시 수집된 개인정보: 탈퇴 후 30일\n2. 기기 정보 및 로그 기록: 최대 1년\n3. 삭제된 콘텐츠 기록: 삭제 후 30일</string>
    <string name="pp_right">회원은 언제든지 서비스 내부 ‘마이페이지’에서 자신의 개인정보를 조회하거나 수정, 삭제, 탈퇴를 할 수 있습니다.</string>
    <string name="pp_cookie">쿠키란 웹사이트를 운영하는 데 이용되는 서버가 귀하의 브라우저에 보내는 아주 작은 텍스트 파일로서 귀하의 컴퓨터 및 모바일 기기에 저장됩니다. 서비스는 사이트 로그인을 위해 아이디 식별에 쿠키를 사용할 수 있습니다.</string>
    <string name="pp_provider">Diggle는 회원의 개인정보를 최선으로 보호하고 관련된 불만을 처리하기 위해 노력하고 있습니다.\n관련 문의사항은 책임자(이형기, dlgudrl1203@gmail.com )를 통해 전달해주시기 바랍니다.</string>
    <string name="pp_etc">이 개인정보 처리방침은 2023년 11월 25일에 최종적으로 개정되었습니다.</string>
    <string name="guideline_ground">Diggle의 그라운드는 \'홈\' 페이지에요.\n그라운드에 내가 팔로우하는 친구의 멜로디 피드를 살펴보고,\n친구의 멜로디 앨범을 들어보세요.\n내 마음에 드는 게시물에 좋아요를 누르거나\n음악 취향이 비슷한 친구를 팔로우하면\nDiggle이 나에게 더 잘 맞는 노래를 추천해드려요!</string>
    <string name="guideline_archive">Diggle의 아카이브는 마이페이지에요.\n마이페이지에서 내가 좋아하는 노래를 모아 듣고,\n내가 만든 멜로디앨범을 빠르게 재생해보세요.\n좋아하는 노래를 듣다보면,\nDiggle이 나에게 더 잘 맞는 노래를 추천해드려요!</string>
    <string name="guideline_melody">Diggle의 게시물은 멜로디 카드에요.\n10장의 멜로디 카드가 하나의 멜로디 앨범으로 표현되죠!\n멜로디 앨범은 나를 나타내는 가장 좋은 프로필이 됩니다.\n멜로디 앨범을 만들어, 나만의 멜로디 카드를 제작해보세요.\n음악에는 향수가 있어요.\n좋아하는 노래, 추억의 장소, 그날의 기억을 하나의 카드로 엮어\n친구들과 공유하며 그날의 향수를 추억해보세요!\n멜로디 카드로 내 추억을 더 많이 공유할수록,\nDiggle이 나에게 더 잘 맞는 노래를 추천해드려요!</string>
    <string name="withdrawal">탈퇴하시면 개인정보 처리 방침에 따라 최대 30일 이내에\n\‘%1$s\'님의 모든 개인정보 및 계정 정보가 삭제됩니다.\n이후에는 \‘%2$s\'님의 앱 내 활동 데이터는 다시 복구될 수 없습니다.</string>

</resources>