<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".setting.PrivacyPolicyActivity">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_arrow_icon"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="개인정보 처리 방침"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backBtn"/>
    <LinearLayout
        android:id="@+id/bottomTabLayout"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:background="@drawable/bottom_navigation"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/tabGround"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/home_off" />

        <ImageView
            android:id="@+id/tabMelody"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/plus_off" />

        <ImageView
            android:id="@+id/tabProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:src="@drawable/profile" />
    </LinearLayout>
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="66dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1. 개인정보 처리 방침"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_policy"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2. 수집하는 개인정보의 항목"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_item"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3. 수집한 개인정보의 처리 목적"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_purpose"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4. 개인정보의 제3자 제공"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_third_party"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5. 수집한 개인정보의 보관 및 파기"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_store_destruction"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="6. 정보주체의 권리, 의무 및 행사"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_right"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="7. 쿠키"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_cookie"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="8. 개인정보에 관한 책임자 및 서비스"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/pp_provider"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="9. 기타"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>
                <TextView
                    android:id="@+id/text9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="8sp"
                    android:gravity="top"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="48dp"
                    android:text="@string/pp_etc"/>
            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>