<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".setting.ToSActivity">
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_arrow_icon"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="서비스 이용 약관"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"/>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. 서비스 이용 약관의 목적"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/tos_purpose"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="2. 커뮤니티 가이드라인"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/tos_community_guideline"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="3. 콘텐츠 권한"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/tos_contents_auth"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="4. Diggle 이용 데이터의 저장 및 활용"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/tos_data_use_policy"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="5. 서비스 이용 약관에 관한 책임자 및 서비스"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/tos_service_provider"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="6. 기타"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="48dp"
                android:gravity="top"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/tos_etc"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
       </ScrollView>

    <LinearLayout
        android:id="@+id/bottomTabLayout"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:background="@drawable/bottom_navigation"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/tabGround"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/home_off" />

        <ImageView
            android:id="@+id/tabMelody"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/plus_off" />

        <ImageView
            android:id="@+id/tabProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:src="@drawable/profile" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>