<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ground.fragments.LikeMelodyFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_arrow_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melody_nickname"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/likeImage"
            android:background="@drawable/likeimage_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNickname" />

        <ImageView
            android:id="@+id/playIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/playicon"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/likeImage"
            app:layout_constraintEnd_toEndOf="@+id/likeImage" />

        <TextView
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="dlwlrma 님은 댄스 장르에 가장 큰 관심이 있어요!\n가장 많이 들은 아티스트는 New Jeans고\nSuper Shy를 가장 많이 재생했어요!"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/likeImage" />

        <TextView
            android:id="@+id/noRecordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_record"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/likeImage" />

        <TextView
            android:id="@+id/likeListNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/likelist_nickname"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/likeListRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/likeListNickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>